# Ray-Tracer-in-one-weekend

./: .gitignore  CMakeLists.txt  README.md
cmake/: catch.cmake  clang_tidy.cmake
source/: CMakeLists.txt  main.cpp  random.cpp  random.hpp
source/image_utils/: colour.hpp  frame.cpp  frame.hpp  ppm.cpp  ppm.hpp
source/math/: constants.hpp
source/math/geometry/: direction.hpp  point.hpp  vector.hpp
source/scene/: camera.cpp  camera.hpp  dielectric.cpp  dielectric.hpp  hit.hpp  lambertian.cpp  lambertian.hpp  lens.cpp  lens.hpp  material.hpp  metal.cpp  metal.hpp  orthonormal_basis.hpp  pinhole.cpp  pinhole.hpp  primitive.hpp  ray.hpp  scene.cpp  scene.hpp  shape.hpp  sphere.cpp  sphere.hpp
tests/: CMakeLists.txt
tests/image_utils/: ppm.cpp
tests/math/geometry/: direction.cpp  point.cpp  vector.cpp
